--- a/stylesniffer-testkit/pom.xml
+++ b/stylesniffer-testkit/pom.xml
@@ -43,6 +43,8 @@
     <maven.compiler.target>${java.sdk.version}</maven.compiler.target>
     <project.build.sourceEncoding>${source.encoding}</project.build.sourceEncoding>
     <stylesniffer.root>${basedir}/..</stylesniffer.root>
+    <!-- sonar analysis -->
+    <sonar.projectKey>${project.sonar.root.projectKey}-${project.groupId}-${project.artifactId}</sonar.projectKey>
   </properties>
 
   <dependencies>
