--- a/stylesniffer-testkit/pom.xml
+++ b/stylesniffer-testkit/pom.xml
@@ -30,6 +30,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>stylesniffer-testkit</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -39,11 +40,7 @@
   </parent>
 
   <properties>
-    <maven.compiler.source>${java.sdk.version}</maven.compiler.source>
-    <maven.compiler.target>${java.sdk.version}</maven.compiler.target>
-    <project.build.sourceEncoding>${source.encoding}</project.build.sourceEncoding>
     <stylesniffer.root>${basedir}/..</stylesniffer.root>
-    <!-- sonar analysis -->
     <sonar.projectKey>${project.sonar.root.projectKey}-${project.groupId}-${project.artifactId}</sonar.projectKey>
   </properties>
 
@@ -52,6 +49,10 @@
       <groupId>dev.cookiecode</groupId>
       <artifactId>stylesniffer-api</artifactId>
       <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
