Setup release to maven central workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           name: BUILD_FILES
           path: |
+            stylesniffer-report-aggregate/target
             stylesniffer-annotation-processor/target
             stylesniffer-api/target
             stylesniffer-impl/target
