--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
     StyleSniffer provides a straightforward and efficient way to understand and manage these styles.
   </description>
   <url>https://stylesniffer.cookiecode.dev/</url>
+  <scm>
+    <connection>scm:git:git@github.com:sebastienvermeille/StyleSniffer.git</connection>
+    <developerConnection>scm:git:git@github.com:sebastienvermeille/StyleSniffer.git</developerConnection>
+    <url>https://github.com/sebastienvermeille/stylesniffer</url>
+  </scm>
   <licenses>
     <license>
       <name>MIT License</name>
